6.2.1
[fix] some streams reporting as Unavailable
[fix] utf-8 file paths
[lang] sk_sk strings |contrib: jose1711|

6.2.0
[add] Context menu -> 'Play with subtitles' |contrib: solarus|
[add] Option to download subtitles before playback in Settings -> General -> Configure subtitles
[add] Refresh context menu to all videos/live streams
[add] &strm=true parameter for strm files in Kodi 18 |contrib: vlmaksime|
    - use description from library and set watched status
[add] 'Settings -> Advanced -> Use YouTube website urls' for external/alternative players
            eg. Player: MPC-BE, URL: https://www.youtube.com/watch?v=C0NyvxTJGcQ
            eg. playercorefactory.xml
                <?xml version="1.0" encoding="UTF-8"?>
                <playercorefactory>
                    <players>
                        <player name="MPC-BE" type="ExternalPlayer" audio="false" video="true">
                            <filename>C:\Program Files\MPC-BE x64\mpc-be64.exe</filename>
                            <args>"{1}" /fullscreen /close</args>
                            <hidexbmc>true</hidexbmc>
                            <hideconsole>true</hideconsole>
                            <warpcursor>none</warpcursor>
                        </player>
                    </players>
                    <rules action="prepend">
                       <rule filename="(?:http)*s*:*[/]{0,2}(?:www\.)*youtu(?:\.be/|be\.com/(?:embed/|watch/|v/|.*?[?&/]v=))[a-zA-Z0-9_\-]{11}.*" player="MPC-BE" />
                    </rules>
                </playercorefactory>
[fix] Reported background progress dialog percentage
[fix] Playlist items, use video_items instead of playback_items
[fix] search history size
[fix] remove Spanish (Latin America)|es-419 from the setup wizard, causing invalidLanguage and invalidRelevanceLanguage errors
[upd] Improve speed of playback starting and resolver
            before: min: 1.5s max: 2.6s median: 1.7s
            after:  min: 0.9s max: 2.6s median: 1.2s